--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -263,12 +263,91 @@ svg.bottom-right {
 }
 .heading{
     font-size: 25px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 .sub-heading{
     font-size: 22px;
+    margin-top: 1.8rem;
 }
 .beginning-the-game{
     margin-left: 15px;
 }
+.gameboard-legend-list li {
+    margin-bottom: 1rem;
+}
 /* instructions page styling ends here */
 
+/* region page styling */
+#region-table {
+    border-bottom: 4px solid #202945;
+    text-align: center;
+    border-top: none;
+}
+#region-table  thead{
+    color: #000;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+#region-table thead th{
+    border: 3px solid #fff;
+    background-color: #00C4B3;
+}
+#region-table .pink-bg {
+    background-color: #ff8e9f;
+    text-align: center;
+    border: 3px solid #fff;
+}
+#region-table .dark-blue-bg {
+    background-color: #202945;
+    color: #fff;
+}
+#region-table .light-blue-bg {
+    background-color: #92C0E9;
+    color: #202945;
+    font-weight: bold;
+    border: 3px solid #fff;
+}
+#region-table .light-grey-bg {
+    background-color: #E6E7E7;
+    color: #000;
+    border: 3px solid #fff;
+}
+#region-table .lighter-blue-bg {
+    background-color: #D9E8F7;
+    color: #000;
+    border: 3px solid #fff;
+}
+#region-table .transparent {
+    background-color: transparent;
+}
+#region-table .border-bottom {
+    border-top-color: transparent;
+    border-bottom: 4px solid #202945 !important;
+}
+#region-table .border-top {
+    border-top: 4px solid #202945 !important;
+}
+#region-table .border-left {
+    border-left: 4px solid #202945 !important;
+}
+#region-table .border-right {
+    border-right: 4px solid #202945 !important;
+}
+#region-table .no-y-border {
+    border-left: 0;
+    border-right: 0 solid transparent;
+}
+#region-table tbody .border-left {
+    border-left: 7px solid #202945 !important;
+}
+#region-table .no-left-border {
+    border-left: 0px solid transparent !important;
+}
+#region-table .no-top-border {
+    border-top: 0px solid transparent !important;
+}
+#region-table .no-border {
+    border: 0px solid transparent !important;
+}
+/* region page styling */
