--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -403,9 +403,9 @@ li.nav-item.has-submenu::before {
 .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 300px;
-    height: 380px;
-    background: #fff;
+    width: 400px;
+    /* height: 420px; */
+    background: transparent;
 }
 .swiper-slide .img-container {
     width: 100%;
