--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -259,11 +259,21 @@ li.nav-item.has-submenu::before {
 }
 #bottomNav .sub-menu li a {
     color: var(--primary-colour);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /* padding-top: 20px;
+    padding-bottom: 20px; */
     text-decoration: none;
 }
 
+.instructions-page #bottomNav ul li.active:before {
+    content: '';
+    /* background-color: #fff; */
+    border-top: 5px solid #fff6f7;
+    height: 5px;
+    width: 100%;
+    display: block;
+    margin-top: 16px;
+    padding-top: 25px;
+}
 /* instructions page styling starts here */
 #instructions{
     line-height: 27px;
@@ -424,4 +434,9 @@ li.nav-item.has-submenu::before {
 .swiper-slide .info {
     box-sizing: border-box;
     padding: 20px;
+}
+@media (max-width: 767px) {
+    .glossary-page #particles {
+        display: none;
+    }
 }
