--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,10 @@ svg.bottom-right {
     height: calc(100vh - 99px);
     z-index: -1;
 }
+.cards-page svg.bottom-right {
+    min-height: 100vh;
+    height: 100%;
+}
 .content {
     display: flex;
     justify-content: center;
@@ -108,6 +112,9 @@ svg.bottom-right {
 }
 .height-500 {
     min-height: 600px;
+}
+.height-900 {
+    min-height: 900px;
 }
 .hero-paragraph {
     color: rgba(0,0,0, 0.5);
@@ -409,12 +416,13 @@ li.nav-item.has-submenu::before {
 .swiper-container {
     width: 100%;
     padding-top: 100px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
 }
 
 .swiper-container .description {
     padding: 10px;
     text-align: center;
+    display: none;
 }
 .swiper-container-sales .swiper-slide-active .description {
     background-color: #e8e8e8;
@@ -429,8 +437,20 @@ li.nav-item.has-submenu::before {
     /* height: 420px; */
     background: transparent;
 }
+.card-description {
+    padding: 20px;
+    background-color: #fff;
+    margin-top: 80px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.32s ease-in-out;
+    text-align: center;
+}
 .navbar {
-        z-index: 99999999;
+    z-index: 99999999;
 }
 @media (max-width: 600px) {
     .swiper-slide {
